Fix visual error where header was taking too much vertical space

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ button:focus-visible {
 }
 
 .header {
-  height: 100vh;
+  
 }
 
 .logo-name {
